--- a/0806.4309/ProceedingBonn.tex
+++ b/0806.4309/ProceedingBonn.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,here,feynmf]{article}
+\documentclass[12pt,here,feynmf]{article}
 
 \usepackage{feynmf}
 \usepackage[all]{xy}
@@ -7,16 +7,39 @@
 
 \usepackage{epstopdf}
 
-%\setlength{\textwidth}{18cm}
-%\setlength{\leftmargin}{-6cm}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\textheight=23.5cm    \textwidth=16.5cm
-\oddsidemargin=0cm
-\topmargin=0cm
-\topskip=0cm  
-\headheight=0cm
-\headsep=0cm
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
 
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \begin{document}
 
@@ -64,7 +87,7 @@ DEUTSCHLAND
 
 
 \begin{center}
-{\it \large Talk given by T. Krajewski at the conference "Combinatorics and Physics"}\\
+{\it \large Talk given by T. Krajewski at the conference ``Combinatorics and Physics"}\\
 \vspace{0.5cm}
 {\it \large Max Planck Institut F\"ur Mathematik}\\
 \vspace{0.5cm}
@@ -287,7 +310,7 @@ In the construction of the renormalized theory, the renormalized coupling consta
 \begin{equation}
 \mu\frac{dg}{d\mu}=\beta(g).
 \end{equation}    
-The $\beta$ function can be determined by requiring that the bare paramaters, which are the "true" parameters of the theory entering in the path integral, are independent of $\mu$.  Accordingly, the low energy renormalized theory has a subtle form of scale invariance inherited from the behavior of the high energy virtual processes. The zeroes of $\beta$ define the fixed points of the renormalization group  and play a fundamental role. In particular, the origin $g=0$ is a fixed point and it is (UV) attractive if $\beta(g)<0$. This last case corresponds to the asymptotically free theories for which the coupling constant goes to $0$ at high energies.  These theories are believed to be consistent non pertubatively, that is,  the expansion of the Green's functions can be given a meaning beyond that of an asymptotic series at $g=0$. In the other case, there are strong arguments against a non perturbative definition.
+The $\beta$ function can be determined by requiring that the bare paramaters, which are the ``true" parameters of the theory entering in the path integral, are independent of $\mu$.  Accordingly, the low energy renormalized theory has a subtle form of scale invariance inherited from the behavior of the high energy virtual processes. The zeroes of $\beta$ define the fixed points of the renormalization group  and play a fundamental role. In particular, the origin $g=0$ is a fixed point and it is (UV) attractive if $\beta(g)<0$. This last case corresponds to the asymptotically free theories for which the coupling constant goes to $0$ at high energies.  These theories are believed to be consistent non pertubatively, that is,  the expansion of the Green's functions can be given a meaning beyond that of an asymptotic series at $g=0$. In the other case, there are strong arguments against a non perturbative definition.
 
 
 
@@ -559,7 +582,7 @@ A_{\Lambda,\Lambda_{}0}(x,y)=\int_{{\Bbb R}^{D}}\frac{d^{D}p}{(2\pi)^{D}}\,
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=10cm]{_polch.eps}
+\includegraphics[width=10cm]{_polch.pdf}
 \caption{Diagrammatic form of Polchinski's equation}
 \label{Polchinskidiag}
 \end{center}
@@ -985,7 +1008,7 @@ This is a fixed point equation for the integral non linear operator $x(s)\mapsto
 x(s)=\sum_{t}\frac{1}{\mathrm{S}_{t}}\int_{I^{t}_{s,s_{0}}}\!\!d^{|t|}s\,
 \prod_{v\in t}^{\longrightarrow}X_{s^{v}}^{(n_{v})}(x_{0}).
 \end{equation}
-To explain the meaning of these terms, recall that any tree is orientated form the root to the leaves. Then, associate to each vertex $v$ a real variable  $s_{v}$ in such a way that $s_{0}\leq s_{v}\leq s_{v_{+}}$ if $v_{+}$ is a vertex immediately above $v$  and $s_{v_{+}}=s$ for the root. This defines what we call a  "treeplex" $I^{t}_{s,s_{0}}\subset{\Bbb R}^{|t|}$, that reduces to a ordinary simplex if  $t$ is a  tree without branching. Then compose all the multilinear operators $X_{s^{v}}^{(n_{v})}(x_{0})$ from the root to the leaves and integrate over the variables $s_{v}$. Obviously, for linear $X$ we recover the ordinary time ordered products, with an integral over a simplex instead of a treeplex. 
+To explain the meaning of these terms, recall that any tree is orientated form the root to the leaves. Then, associate to each vertex $v$ a real variable  $s_{v}$ in such a way that $s_{0}\leq s_{v}\leq s_{v_{+}}$ if $v_{+}$ is a vertex immediately above $v$  and $s_{v_{+}}=s$ for the root. This defines what we call a  ``treeplex" $I^{t}_{s,s_{0}}\subset{\Bbb R}^{|t|}$, that reduces to a ordinary simplex if  $t$ is a  tree without branching. Then compose all the multilinear operators $X_{s^{v}}^{(n_{v})}(x_{0})$ from the root to the leaves and integrate over the variables $s_{v}$. Obviously, for linear $X$ we recover the ordinary time ordered products, with an integral over a simplex instead of a treeplex. 
 
 
 
@@ -1017,7 +1040,7 @@ tree. For example, for the simplest tree with one branching, this is illustrated
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{_treeplex.eps}
+\includegraphics[width=8cm]{_treeplex.pdf}
 \caption{Geometric interpretation of the coproduct}
 \label{geometricinter}
 \end{center}
@@ -1383,15 +1406,15 @@ First of all, let us notice that there are only two diagrams of the degree one (
 \begin{equation}
 \left\{
 \begin{array}{lclcc}
-\delta_{\mathrm{tree}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.eps}}})&=&1&&\cr
-\delta_{\mathrm{tree}}(\gamma)&=&0&\mathrm{if}&\gamma\neq\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.eps}}}
+\delta_{\mathrm{tree}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.pdf}}})&=&1&&\cr
+\delta_{\mathrm{tree}}(\gamma)&=&0&\mathrm{if}&\gamma\neq\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.pdf}}}
 \end{array}
 \right.
 \qquad\mathrm{and}\qquad
 \left\{
 \begin{array}{lclcc}
-\delta_{\mathrm{loop}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.eps}}})&=&1&&\cr
-\delta_{\mathrm{loop}}(\gamma)&=&0&\mathrm{if}&\gamma\neq\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.eps}}}
+\delta_{\mathrm{loop}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.pdf}}})&=&1&&\cr
+\delta_{\mathrm{loop}}(\gamma)&=&0&\mathrm{if}&\gamma\neq\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.pdf}}}
 \end{array}
 \right.
 \end{equation}
@@ -1717,10 +1740,10 @@ ${\cal H}_{F}^{\mathrm{ord}}$ with coproduct similar to
 that of ${\cal H}_{F}$ given in \eqref{coproductfeyn}, except that it has to preserve the box structure. This coproduct is very similar to the rooted tree coproduct, as it reproduces on the diagram the admissible cuts of the tree as an extraction of disjoint boxes. For example, with $\Delta'$ the non trivial part of
 $\Delta$:
 \begin{center}
-\includegraphics[width=12cm]{_pic2.eps},\\
-\includegraphics[width=6cm]{_pic3.eps},\\
-\includegraphics[width=12cm]{_pic1.eps},\\
-\includegraphics[width=6cm]{_pic4.eps}.\\
+\includegraphics[width=12cm]{_pic2.pdf},\\
+\includegraphics[width=6cm]{_pic3.pdf},\\
+\includegraphics[width=12cm]{_pic1.pdf},\\
+\includegraphics[width=6cm]{_pic4.pdf}.\\
 \end{center}
 Because the effective action could as well be computed in a single step using the propagator $A_{\Lambda,\Lambda_{0}}$, 
 \begin{equation}
@@ -1771,15 +1794,15 @@ To implement dimensional analysis at the level of the Hopf algebras  ${\cal H}_{
 and we can identify the coupling constant, square mass and wave function parameter as the components of the action in this basis. These labels are generalization of the external structures introduced by Connes and Kreimer in \cite{ck1}, the main difference being that we have to treat all the interactions and not only the renormalizable ones. 
 
 A decorated Feynman diagram with a generalized external structure (with an order on the internal lines or not) is a couple $(\widetilde{\gamma},i)$ where the vertices of $\widetilde{\gamma}$ are decorated with indices in $I$. These diagrams generate a commutative Hopf algebra ${\cal H}_{F}^{\mathrm{dec}}$ with coproduct  
-\begin{equation}
-\Delta(\widetilde{\gamma},i)=(\widetilde{\gamma},i)\otimes 1+1\otimes(\widetilde{\gamma},i)+
+\begin{multline}
+\Delta(\widetilde{\gamma},i)=(\widetilde{\gamma},i)\otimes 1+1\otimes(\widetilde{\gamma},i)+\\
 \mathop{\sum}\limits_{\widetilde{\gamma}_{1},\dots,\widetilde{\gamma}_{n}
 {\mathrm{disjoint}\,\subset\widetilde{\gamma}}
 \atop
 i_{1},\dots,i_{n} \,\mathrm{decorations}\,\in I}
 (\widetilde{\gamma}_{1},i_{1})\cdots(\widetilde{\gamma}_{n},i_{n})
 \otimes\left(\frac{\widetilde{\gamma}}{(\widetilde{\gamma}_{1},i_{1})\cdots(\widetilde{\gamma}_{n},i_{n})},i\right),
-\end{equation}
+\end{multline}
 with the vertices of the reduced diagram decorated by the generalized external structures of the subdiagrams. 
 
 Using the background field technique, such a diagram is evaluated with vertices obtained by projecting onto the eigenspace of the decoration carried by the vertex for the fluctuating field $\chi$ and the final result projected onto the eigenspace associated to $i$ for the background field $\phi$. Then, all the composition identities such as \eqref{composeeff} hold since they simply amount to inserting the decomposition ${\cal E}={\cal E'}\oplus{\cal E}$ for each action functional. 
@@ -1817,7 +1840,7 @@ where a spanning tree is a tree drawn on $\gamma$ that touches all the vertices.
 \end{figure}
 For example, for the diagram depicted in figure \ref{fourpointlab}, the first Symanzik polynomial is 
 \begin{equation}
-U_{\includegraphics[width=0.4cm]{fourpointnum.eps}}(\alpha)=
+U_{\includegraphics[width=0.4cm]{fourpointnum.pdf}}(\alpha)=
 \alpha_{1}\alpha_{3}+\alpha_{1}\alpha_{4}+\alpha_{2}\alpha_{3}+\alpha_{2}\alpha_{4}+\alpha_{3}\alpha_{4}.
 \end{equation}
 
@@ -1826,9 +1849,9 @@ U_{\includegraphics[width=0.4cm]{fourpointnum.eps}}(\alpha)=
 
 In the Hopf algebra of Feynman diagrams with labelled edges consider the infinitesimal characters such that
 \begin{equation}
-\delta_{\mathrm{tree}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.eps}}})=1
+\delta_{\mathrm{tree}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte8.pdf}}})=1
 \qquad\mathrm{and}\qquad
-\delta_{\mathrm{loop}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.eps}}})=\alpha_{i}
+\delta_{\mathrm{loop}}(\parbox{0.4cm}{\mbox{\includegraphics[width=0.4cm]{tutte5.pdf}}})=\alpha_{i}
 \end{equation}
 and and that vanish otherwise.  Then, the first Symanzik polynomial can be written as
 \begin{equation}
@@ -1852,7 +1875,7 @@ interpreted in terms of the  contraction/deletion relations \eqref{diffrelations
 
 Thus, $U_{\gamma}(\alpha)$ can be evaluated by summing over all contraction schemes of the loops, generated by the iteration of the coproduct in the computation of  $\mathrm{e}^{\sum_{n}\delta_{n\,\mathrm{loop}}}$. For example, for the diagram depicted in figure \ref{fourpointlab},
 \begin{equation}
-U_{\includegraphics[width=0.4cm]{fourpointnum.eps}}(\alpha)=
+U_{\includegraphics[width=0.4cm]{fourpointnum.pdf}}(\alpha)=
 \frac{1}{2}\big[
 (\alpha_{1}+\alpha_{2}+\alpha_{3})\alpha_{4}+
 (\alpha_{1}+\alpha_{2}+\alpha_{4})\alpha_{3}+
@@ -1871,7 +1894,7 @@ In general, such an expression for the first Symanzik polynomial may prove usefu
 
 
 \begin{figure}
-\centerline{\includegraphics[width=13cm]{sd.eps}}
+\centerline{\includegraphics[width=13cm]{sd.pdf}}
 \caption{Schwinger-Dyson equation in $\phi^{3}$ theory}
 \label{SDfig}
 \end{figure}
@@ -1919,9 +1942,11 @@ It is important to note that the trees we obtain have white vertices with at mos
 The black leaves represent the sources $J$ and the white vertices the differential operator ${\cal F}_{\mathrm{loop}}$, which vanishes if there are not enough sources.  Conversely, given any tree with this property, we can reconstruct all the Feynman diagrams that appear in the corresponding power of the Schwinger-Dyson equation by relating each white vertex to a black leaf located below. This tree structure drawn on the Feynman diagrams may be used to define another Hopf algebra structure by performing admissible cuts on the tree. Of course, the correspondence between Feynman diagrams and trees is not one to one: To a tree correspond several diagrams and to a diagram several trees.
 
 
-\begin{figure}\[
-\parbox{7cm}{\includegraphics[width=7cm]{diagphi.pdf}} \longleftrightarrow\qquad
-\parbox{12cm}{\includegraphics[width=12cm]{tree.pdf}}\]
+\begin{figure}
+$$
+\parbox{5cm}{\includegraphics[width=5cm]{diagphi.pdf}} \longleftrightarrow\qquad
+\parbox{5cm}{\includegraphics[width=8cm]{tree.pdf}}
+$$
 \caption{A planar $\phi^{3}$ diagram and its reconstruction from a tree}
 \label{bijection}
 \end{figure}
@@ -1966,7 +1991,6 @@ If we set $h=0$, we obtain the Catalan numbers $1,2,5,\dots$ that count the numb
 
 \section{Conclusion and outlook}
 
-\renewcommand{\baselinestretch}{4}
 In this talk, we have presented, in a hopefully pedagogical way, some perturbative algebraic methods common to non linear equations and effective action computations. It is conveniently summarized by the following table.
 \begin{center}
 \begin{tabular}{|c|c|} 
@@ -1981,8 +2005,12 @@ powers of non linear operators $X^{t}(x)$&background field technique $A^{\gamma}
 \hline
 &\cr
 $x'=(\mathrm{id}-X)^{-1}(x)=\sum_{t}\frac{X^{t}(x)}{\mathrm{S}_{t}}$&
-$S'[\phi]=\log\int[D\chi]\mathrm{e}^{-\frac{1}{2}\chi\cdot A\cdot\chi+S[\phi+\chi]}=
-\sum_{\gamma}\frac{A^{\gamma}(S)}{\mathrm{S}_{\gamma}}[\phi]$\cr
+$
+\begin{aligned}
+S'[\phi]&=\log\int[D\chi]\mathrm{e}^{-\frac{1}{2}\chi\cdot A\cdot\chi+S[\phi+\chi]}\\
+&= \sum_{\gamma}\frac{A^{\gamma}(S)}{\mathrm{S}_{\gamma}}[\phi]
+\end{aligned}
+$\cr
 &\cr
 \hline
 composition&successive integrations\cr
@@ -2019,19 +2047,19 @@ Loop quantum gravity (see the book \cite{rovelli} for a general overview) is a t
 
 {\bf Acknowledgements}
 
-We are grateful to F. Girelli who collaborated with us on an early stage of this work. We would also like to thank V. Rivasseau and his group for their \emph{constructive} remarks and M. Aguilar for some comments and a useful reference. Finally, let us also thank K. Ebrahimi-Fard, M. Marcolli and W. van Suijlekom, who organized the conference "Combinatorics and Physics" at the MPIM in Bonn in march 2007. Work partially supported by a EU Marie Curie fellowship EIF-025947 QGNC.
+We are grateful to F. Girelli who collaborated with us on an early stage of this work. We would also like to thank V. Rivasseau and his group for their \emph{constructive} remarks and M. Aguilar for some comments and a useful reference. Finally, let us also thank K. Ebrahimi-Fard, M. Marcolli and W. van Suijlekom, who organized the conference ``Combinatorics and Physics" at the MPIM in Bonn in march 2007. Work partially supported by a EU Marie Curie fellowship EIF-025947 QGNC.
 
 \begin{thebibliography}{99}
 \bibitem{ck0}
   A.~Connes and D.~Kreimer,
-  {\it "Hopf algebras, renormalization and noncommutative geometry"},
+  {\it ``Hopf algebras, renormalization and noncommutative geometry"},
   Commun.\ Math.\ Phys.\  {\bf 199} (1998) 203
   [arXiv:hep-th/9808042]
 
 
 \bibitem{ck1}
   A.~Connes and D.~Kreimer,
-  {\it "Renormalization in quantum field theory and the Riemann-Hilbert  problem.
+  {\it ``Renormalization in quantum field theory and the Riemann-Hilbert  problem.
   I: The Hopf algebra structure of graphs and the main theorem''},
   Commun.\ Math.\ Phys.\  {\bf 210} (2000) 249
   [arXiv:hep-th/9912092]
@@ -2048,7 +2076,7 @@ A.~Connes and M.~Marcolli, {\it Noncommutative Geometry, Quantum Fields and Moti
 
 \bibitem{kk}
   K.~Ebrahimi-Fard and D.~Kreimer,
-  {\it ''Hopf algebra approach to Feynman diagram calculations''}
+  {\it ``Hopf algebra approach to Feynman diagram calculations''}
   J.\ Phys.\ A  {\bf 38} (2005) R385
   [arXiv:hep-th/0510202]
 
