--- a/0806.4309/ProceedingBonn.tex
+++ b/0806.4309/ProceedingBonn.tex
@@ -258,10 +258,10 @@ At a formal level, the Green's functions \eqref{green} can be computed as a powe
 K(x,y)=\int_{{\Bbb R}^{D}}\frac{d^{D}p}{(2\pi)^{D}}\,\frac{\mathrm{e}^{\mathrm{i}p\cdot(x-y)}}{p^{2}+m^{2}}.
 \end{equation}
 and $V(\phi)$ by the interaction term
-\begin{equation}
-\frac{g}{N!}\int_{{\Bbb R}^{D}} d^{D}x\,\phi^{N}(x)=
+\begin{multline}
+\frac{g}{N!}\int_{{\Bbb R}^{D}} d^{D}x\,\phi^{N}(x)=\\
 \frac{g}{N!}\int_{{\Bbb R}^{D}}\frac{d^{D}p_{1}}{(2\pi)^{D}}\cdots\frac{d^{D}p_{N}}{(2\pi)^{D}}\,(2\pi)^{D}\delta(p_{1}+\cdots+p_{N})\tilde{\phi}(p_{1})\dots\tilde{\phi}(p_{N}),
-\end{equation}
+\end{multline}
 with 
 \begin{equation}
 \tilde{\phi}(p)=\int_{{\Bbb R}^{D}}d^{D}x\,\mathrm{e}^{-\mathrm{i}p\cdot x}\,\phi(x)
@@ -287,9 +287,10 @@ This procedure is known as the regularization and can be performed in various wa
 
 
 For a renormalizable theory like the $\phi^{4}$ theory, one can trade the parameters $g$ and $m$ for some cut-offs dependent ones $g_{0}(\Lambda)$ and $m_{0}(\Lambda)$ and further introduce an additional wave function renormalization $Z(\Lambda)$ in such a way that $Z^{\frac{n}{2}}(\Lambda)G_{\Lambda}(x_{1},\dots,x_{n},m_{0}(\Lambda), g_{0}(\Lambda))$ admits a finite limit when $\Lambda\rightarrow\infty$. To obtain definite physical predictions, the bare parameters $g_{0}(\Lambda)$ and $m_{0}(\Lambda)$ and the wave function renormalization $Z(\Lambda)$ must be determined in terms of  normalization conditions involving renormalized parameters $m_{\mathrm{r}}$ and $g_{\mathrm{r}}$ measured at a low energy scale $\mu$. Thus, we define the renormalized Green's functions as
-\begin{equation}
-G_{\mathrm{r}}(x_{1},\dots,x_{n},m_{\mathrm{r}},\mu, g_{\mathrm{r}})=\lim_{\Lambda\rightarrow\infty}Z^{\frac{n}{2}}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu)G_{\Lambda}(x_{1},\dots,x_{n},m_{0}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu), g_{0}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu))
-\end{equation}
+\begin{multline}
+G_{\mathrm{r}}(x_{1},\dots,x_{n},m_{\mathrm{r}},\mu, g_{\mathrm{r}})=\lim_{\Lambda\rightarrow\infty}Z^{\frac{n}{2}}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu)G_{\Lambda}(x_{1},\dots,x_{n},m_{0}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu), \\
+g_{0}(\Lambda,m_{\mathrm{r}}, g_{\mathrm{r}},\mu))
+\end{multline}
 Note that we are dealing here with perturbative renormalization only, so that the previous equality must be understood as an equality between formal power series in $g_{\mathrm{r}}$. In fact, $g_{0}(\Lambda)$, $m_{0}(\Lambda)$ and $Z(\Lambda)$ are themselves formal power series in $g_{\mathrm{r}}$ that can be computed in terms of Feynman diagrams using the Bogoliubov-Parasiuk-Hepp-Zimermann (BPHZ) formula. Roughly speaking, the contribution of a divergent diagram with 2 or 4 external legs to the renormalisation of the parameters is encoded in its counterterm $C(\gamma)$ which is determined recursively by the relation
 \begin{equation} 
 C(\gamma)=T\Big(\sum_{\left\{\gamma_{i},\dots\right\}\atop \gamma_{i}\cap\gamma_{j}=\emptyset}\prod_{i}C(\gamma_{i})
@@ -343,48 +344,48 @@ To close this preliminary section on renormalization, let us give a brief histor
 
 \begin{itemize}
 \item
-\underline{\bf Early computations in QED}
+{\bf Early computations in QED}
 
 It was already noticed by the founding fathers of QED in the thirties that the first non trivial terms of the perturbative expansion are plagued by infinities. However, certain combination of divergent quantities were shown to be finite, thus leading to successfully tested predictions. For instance, the anomalous magnetic moment of the electron, which is nowadays one of the most precisely tested prediction of physics. This set the stage for the general proof of the renormalizabilty of QED in the fifties by  Dyson, Feynman, Schwinger and Tomonoga.
 
 \item
-\underline{\bf Perturbative QED  and its $\beta$ function}
+{\bf Perturbative QED  and its $\beta$ function}
 
 For QED with massless fermions an altered form of scale invariance was discovered: If we measure the low energy electric charge $e$ at various energies $\mu$, we describe the same physics provided we allow for a $\mu$ dependent charge $e_{\mu}$. QED has a positive $\beta$ function so that the electric charge increases at high energy. This also indicates a breakdown of (perturbative) QED at very high energy, which is no surprise since QED is not a complete theory as it does not take into account nuclear forces.
 
 \item
-\underline{\bf BPHZ (Bogoliubov-Parasiuk-Hepp-Zimmermann) formula}
+{\bf BPHZ (Bogoliubov-Parasiuk-Hepp-Zimmermann) formula}
  
 Systematic  combinatorial rules for renormalization were found in the sixities allowing to express the counterterm of a diagrams in terms of counterterms of  its subdiagrams and divergent integrals. This is the content of the BPHZ formula and solved the problem of overlapping divergences.
 
 \item
-\underline{\bf Electroweak interactions}
+{\bf Electroweak interactions}
 
 In the late sixties, Glashow, Salam and Weinberg proposed a model based on spontaneously broken non-abelian gauge theories combining electromagnetic and weak interactions. Note that the latter was previously described by the non renormalizable Fermi Lagrangian. This electroweak model was later shown to be renormalizable by 't Hooft and Veltman and the predicted vector bosons were observed at CERN in 1983. Spontaneous symmetry breaking yielding massive vector bosons is achieved through the introduction of the Higgs field, still to be experimentally discovered at the time of writing (mid 2008). 
 
 \item
-\underline{\bf Strong interactions}
+{\bf Strong interactions}
 
 In the seventies, non-abelian gauge theories with a limited number of fermions were shown to be asymptotically free, meaning that the scale dependent coupling constant is driven to zero at very high energy. This is in agreement with experiments performed at SLAC where quarks inside the hadrons appear to behave as free particles at high energies. Accordingly, the strong force is also described by a renormalizable field theory, Quantum ChromoDynamics (QCD).  However, at low energy the QCD coupling constant increases thus impeding a perturbative treatment.
 
 \item
-\underline{\bf Critical phenomena}
+{\bf Critical phenomena}
 
 Critical phenomena occur in second order phase transitions where the correlation length tends to diverge, so that many degrees of freedom interact. In the seventies, the seminal work of  Wilson led to an understanding of critical phenomena, making use of techniques of renormalizable QFT.    
 
 \item
-\underline{\bf Effective field theories}
+{\bf Effective field theories}
 
 Later on, the Wilsonian viewpoint on renormalization shed a new light on high energy phenomenology. Indeed, most of the models currently used are thought of as effective field theories, yielding accurate physical predictions within a certain range of energy. This is also the point of view adopted in string theory: Whereas the latter is valid at an energy of the order 10$^{19}$ GeV (Planck's energy) or beyond, the standard model coupled to gravity is understood as a low energy effective action valid at a few hundred GeV. This is just as Fermi's theory that can be understood as a low energy effective theory derived from the electroweak model.
     
 
 \item
-\underline{\bf Constructive QFT}
+{\bf Constructive QFT}
 
 In fact, the renormalization program in QFT we previously outlined only makes sense at the pertubative level. This means that physical quantities are computed as asymptotic series in a small coupling constant but nothing is said about the  convergence of this expansion. Constructive QFT  is a branch of mathematical physics aiming at defining the theory using general principles and the information encoded in its perturbative expansion (see \cite{constructive}). Here too, the Wilsonian point of view led to substantial progress.  
 
 \item
-\underline{\bf Stochastic dynamics}
+{\bf Stochastic dynamics}
 
 QFT appear to be a powerful tool each time a system is modeled by a partial differential equation involving a random driving force. For example, the random growth of a surface is described by the Kardar-Parisi-Zhang equation whose solution is expressed as a path integral (see \cite{zee} for a nice pedagogical introduction). Then, renormalization theory provides some efficient tools to investigate the universal behavior of such a system.
 
@@ -866,11 +867,11 @@ converges. Then, the series
 is bounded in norm by the series associated to the equation $z=hf(z)$, which is known to be an analytic function of $h$ at the origin by the implicit function theorem. 
 
 Beyond the geometric series, it may also be useful to consider the binomial series.  For any character $\alpha$ and complex number $a$, let us define
-\begin{equation}
+\begin{multline}
 (\alpha)^{\ast a}=\epsilon+
-a(\alpha\!-\!\epsilon)+\frac{a(a-1)}{2}(\alpha\!-\!\epsilon)\ast(\alpha\!-\!\epsilon)+\cdots+
-\frac{a(a-1)\cdots(a-n+1)}{n!}(\alpha\!-\!\epsilon)^{\ast n}+\cdots.\label{binomial}
-\end{equation}
+a(\alpha\!-\!\epsilon)+\frac{a(a-1)}{2}(\alpha\!-\!\epsilon)\ast(\alpha\!-\!\epsilon)+\cdots+\\
++ \frac{a(a-1)\cdots(a-n+1)}{n!}(\alpha\!-\!\epsilon)^{\ast n}+\cdots.\label{binomial}
+\end{multline}
 Obviously, the binomial series fulffils all the identities we expect
 $(\alpha)^{\ast a}\ast(\alpha)^{\ast b}=(\alpha)^{\ast a+b}$ and $((\alpha)^{\ast a})^{\ast b}=(\alpha)^{\ast ab}$ at the notable exception of $(\alpha)^{\ast a}\ast (\beta)^{\ast a}=(\alpha\ast\beta)^{\ast a}$, which does not hold since  the convolution product is not commutative.  
 
@@ -888,15 +889,15 @@ Accordingly, one can apply the binomial series to a non linear operator,
 \end{equation}
 the coefficients in from of $\frac{X^{t}}{\mathrm{S}_{t}}$ can be considered as tree-lie generalizations of the binomial coefficients, to which they reduce on trees without branchings.
 For instance, up to order 4 we have
-\begin{equation}
-(\mathrm{id}+X)^{a}=1+aX+\frac{a(a-1)}{2}\left(X'[X]+\frac{1}{2}X''[X,X]+\right)+\frac{a(a-1)(a-2)}{6}\bigg( X'[X'[X]]+X''[X,X]\bigg)+\dots.
-\end{equation}
+\begin{multline}
+(\mathrm{id}+X)^{a}=1+aX+\frac{a(a-1)}{2}\left(X'[X]+\frac{1}{2}X''[X,X]+\right)+\\
+\frac{a(a-1)(a-2)}{6}\bigg( X'[X'[X]]+X''[X,X]\bigg)+\dots.
+\end{multline}
 This allows, for instance, to compute the square root of a diffeomorphism 
-\begin{eqnarray}
-\renewcommand{\baselinestretch}{4}
-\sqrt{\mathrm{id}+X}&=&\frac{1}{2}X-\frac{1}{8}X'[X]+\frac{1}{16}X'[X'[X]]-\frac{5}{128}X'[X'[X'[X]]]\cr
-&&+\frac{1}{128}X''[X,X'[X]]-\frac{1}{2\cdot 64}X'[X''[X,X]]+\frac{1}{6\cdot 64}X'''[X,X,X]+\cdots
-\end{eqnarray}
+\begin{multline}
+\sqrt{\mathrm{id}+X}=\frac{1}{2}X-\frac{1}{8}X'[X]+\frac{1}{16}X'[X'[X]]-\frac{5}{128}X'[X'[X'[X]]]+\\
++\frac{1}{128}X''[X,X'[X]]-\frac{1}{2\cdot 64}X'[X''[X,X]]+\frac{1}{6\cdot 64}X'''[X,X,X]+\cdots
+\end{multline}
 which fulfills $\sqrt{\mathrm{id}+X}\circ\sqrt{\mathrm{id}+X}=\mathrm{id}+X$ up to terms of fifth order in $X$. 
 
 Let us also introduce   the number $\widetilde{N}(n,t)$ of surjective maps form the vertices of $t$ to $\left\{1,\cdots,n\right\}$, increasing (but not necessarily in a strict manner) from the root to the leaves.
@@ -907,10 +908,10 @@ Then, by applying the binomial series to the geometric one, we get
 \frac{X^{t}}{\mathrm{S}_{t}}.
 \end{equation}
 Then, by comparing with the expression of $(\mathrm{id}-X)^{-a}$ derived from \eqref{binomX}, we get
-\begin{equation}
-\sum_{n=1}^{|t|}\widetilde{N}(n,t)\frac{a(a-1)\cdots (a-n+1)}{n!}
-=(-1)^{|t|}\sum_{n=d_{t}}^{|t|}N(n,t)(-1)^{n}\frac{a(a+1)\cdots (a+n+1)}{n!}
-\end{equation}
+\begin{multline}
+\sum_{n=1}^{|t|}\widetilde{N}(n,t)\frac{a(a-1)\cdots (a-n+1)}{n!}=\\
+(-1)^{|t|}\sum_{n=d_{t}}^{|t|}N(n,t)(-1)^{n}\frac{a(a+1)\cdots (a+n+1)}{n!}
+\end{multline}
 By evaluating for various values of $a$, we get various relations between $N(n,t)$ and $\tilde{N}(n,t)$. For example, if $a=-1$ we obtain the sum rule
 \begin{equation}
 1=(-1)^{|t|}\sum_{n=d_{t}}^{|t|}(-1)^{n}N(n,t),
@@ -2023,18 +2024,18 @@ The examples presented here are very simple and can also be treated efficiently 
 
 \begin{itemize} 
 \item
-\underline{\bf Multiscale renormalization}
+{\bf Multiscale renormalization}
 
 In pertubative QFT, we recover a finite theory if we choose a cut-off dependent bare coupling constant and expand in powers of the low energy renormalized coupling constant. Nevertheless, the expansion is not satisfying since renormalons generally leads to a divergent series. For asymptotically free theories, the divergence of the perturbative perturbative series can cured by expanding not in a single renormalized coupling, but in a scale dependent one \cite{constructive}. The corresponding couplings are obtained by performing the renormalization not in a single step but by successive effective action computations. Therefore, we expect our techniques to be of interest in the construction of the effective expansion in the scale dependent coupling. 
 
 \item
-\underline{\bf Graph and matroid polynomials}
+{\bf Graph and matroid polynomials}
 
 Graph and matroid polynomials form a venerable subject where convolution products based on Hopf algebras have already proved to useful (see \cite{KRS}). It may be interesting to further develop the methods presented in the derivation  the universality of the Tutte polynomial and its relation to the $q$-state Potts. In particular, this may useful to investigate properties of the recently proposed multivariate generalizations of the Tutte polynomial \cite{sokal}, or other graph polynomials like the Martin and flow polynomials, which seem to have relations with QFT.   
 
 
 \item
-\underline{\bf Spin foam models of quantum gravity}
+{\bf Spin foam models of quantum gravity}
 
 Loop quantum gravity (see the book \cite{rovelli} for a general overview) is a tentative quantum theory of gravity that provides a construction of the Hilbert space of the quantum gravitational field using spin networks. Its path integral counterpart makes use of higher dimensional analogues of Feynman diagrams termed spin foams. The latter define a Hopf algebra, as uncovered by Markopoulou \cite{Fotini}, which may be useful to address the question of  the Wilsonian renormalization of group field theory \cite{oriti}.
 
